--- a/style.css
+++ b/style.css
@@ -12,13 +12,13 @@ body{
     padding: 0;
 }
 .header-image{
-    background-image: url(images/ales-krivec-QCxngnhwiE4-unsplash.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(images/ales-krivec-QCxngnhwiE4-unsplash.jpg);
     width: 100%;
     height: 90vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    filter: blur(2px);
+    
 }
 .header-text{
     width: 30%;
@@ -51,11 +51,11 @@ body{
     margin-left: 10%;
     margin-top: 10%;
 }
-.section-one-image img{
-    width: 65%;
-    height: 130%;
-    margin-left: 15%;
-    border-radius: 10px;
+.section-one-video{
+    width: 100%;
+   margin-right: 10%;
+  
+  
 }
 .section-one h1{
     font-size: 38px;
@@ -73,13 +73,6 @@ body{
 }
 .section-one-text{
     margin-top: 5%;
-}
-#section-one-icon img{
-    width: 70px;
-    height: 55px;
-    position: absolute;
-    top: 138%;
-    left: 58%;
 }
 .section-two{
     display: flex;
